fix: fixed logo size on mobile device

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -403,8 +403,8 @@ legend {
     }
 
     .logo {
-        padding-left: 20px;
-        margin: 0;
+        font-size: 1.8rem;
+        padding-left: 10px;
     }
 
     .about-text {
@@ -447,10 +447,5 @@ legend {
     #image-wrapper {
         width: 90%;
         margin: 10px auto;
-    }
-
-    .logo {
-        font-size: 1.2rem;
-        padding-left: 10px;
     }
 }
